Refactored the time input for a new ingredient into a separate reusable component and updates the ingredient state directly

--- a/src/styles/CreateIngredient.css
+++ b/src/styles/CreateIngredient.css
@@ -1,3 +1,7 @@
+.time-input-form {
+    width: 100%
+}
+
 .time-input {
     width: 40px;
 }
@@ -6,3 +10,4 @@
     height: 30px;
     width: 30px;
 }
+
