--- a/src/styles/Ingredient.css
+++ b/src/styles/Ingredient.css
@@ -1,4 +1,23 @@
 .ingredient-container {
     text-align: left !important;
     justify-content: left;
+    background-color: #ffffff;
+}
+
+.ingredient-element-container {
+    width: 95%;
+    border-bottom: 1px solid rgb(232, 232, 232);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px;
+}
+
+.ingredient-element-container h3 {
+    margin-bottom: 0px;
+}
+
+.ingredient-element-container p {
+    margin-bottom: 0px;
 }
