--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -37,3 +37,13 @@ header h1 {
 header h1 {
     color: var(--primary-purple);
 }
+
+@media (min-width: 601px) {
+  
+}
+
+@media (max-width: 600px) {
+  header {
+    justify-content: center;
+  }
+}
