--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,23 @@
 #root {
-  
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
+@media (min-width: 601px) {
+  main {
+    width: 80vw;
+  }
+}
+
+@media (max-width: 600px) {
+ main {
+  width: 90vw;
+  min-width: 445px;
+ }
+}
+
 main {
-  width: 80vw;
   max-width: 1280px;
   margin: auto;
 }
@@ -19,4 +30,8 @@ main {
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
+}
+
+.recipe-container {
+  margin-top: 70px;
 }
