--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ body {
   color: var(--primary-purple);
   margin: 0;
   display: flex;
-  place-items: center;
+  /*place-items: center;*/
   min-width: 320px;
   min-height: 100vh;
 }
