--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 #root {
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  width: 100vw;
+}
+
+main {
+  max-width: 1280px;
+  margin: auto;
 }
 
 @media (min-width: 601px) {
@@ -13,14 +17,11 @@
 @media (max-width: 600px) {
  main {
   width: 90vw;
-  min-width: 445px;
+  /*min-width: 445px;*/
  }
 }
 
-main {
-  max-width: 1280px;
-  margin: auto;
-}
+
 
 .logo {
   height: 6em;
