--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
+  /* width: 100vw !important; */
+  /* overflow: hidden; */
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -40,8 +41,10 @@ body {
   margin: 0;
   display: flex;
   /*place-items: center;*/
+  width: 100vw;
   min-width: 320px;
   min-height: 100vh;
+  padding: 0px;
 }
 
 h1 {
