--- a/src/styles/Recipe.css
+++ b/src/styles/Recipe.css
@@ -20,3 +20,15 @@
     width: 60%;
     margin: auto;
 }
+
+.clear-recipe-container {
+    width: 100%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.clear-recipe-container button {
+    width: 100%;
+    background-color: var(--primary-red);
+    color: white;
+}
