--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,19 @@ main {
   margin: auto;
 }
 
+.background-image {
+  height: 100vh;
+  min-width: 100vw;
+  min-height: calc(100vw / 1.51); /*bkground image size - 4928 × 3264*/
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 0px;
+  /* opacity: 50%; */
+  z-index: -1;
+  margin: auto;
+}
+
 @media (min-width: 601px) {
   main {
     width: 80vw;
