--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,13 @@
   width: 100vw;
 }
 
+body {
+  background-color: var(--primary-bg-color);
+}
+
 main {
-  max-width: 1280px;
+  padding-top: 70px;
+  width: 100%;
   margin: auto;
 }
 
@@ -16,25 +21,15 @@ main {
   left: 50%;
   transform: translateX(-50%);
   top: 0px;
-  /* opacity: 50%; */
-  z-index: -1;
+  opacity: 15%;
+  z-index: 0; 
   margin: auto;
 }
 
-@media (min-width: 601px) {
-  main {
-    width: 80vw;
-  }
+.app-container{
+  position: relative;
+  z-index: 1 !important;
 }
-
-@media (max-width: 600px) {
- main {
-  width: 90vw;
-  /*min-width: 445px;*/
- }
-}
-
-
 
 .logo {
   height: 6em;
