--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -19,6 +19,15 @@ header {
   align-items: center; /* ensure children are vertically centered */
 }
 
+.navbar-light .navbar-brand {
+  color: var(--primary-purple);
+}
+
+.navbar-light .navbar-brand:hover {
+  color: var(--primary-purple);
+  text-shadow: 1px;
+}
+
 .navbar-brand {
   display: flex;
   align-items: center; /* center image + text together */
@@ -30,13 +39,6 @@ header {
   width: auto;
 }
 
-header h1 {
-  color: var(--primary-purple);
-}
-
-header h1 {
-    color: var(--primary-purple);
-}
 
 @media (min-width: 601px) {
   
