--- a/src/styles/Welcome.css
+++ b/src/styles/Welcome.css
@@ -22,12 +22,12 @@
 
 .welcome-container .get-cooking {
     font-size: 2em;
-    background-color: var(--primary-green);
+    background-color: var(--btn-green);
     color: white;
 }
 
 @media (min-width: 601px) {
-  main {
+  .welcome-container {
     width: 80%;
   }
 }
