--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@ main {
 .background-image {
   height: 100vh;
   min-width: 100vw;
-  min-height: calc(100vw / 1.51); /*bkground image size - 4928 × 3264*/
+  min-height: calc(100vw / (2952/4428)); /*bkground image size - 2952 × 4428*/
   position: fixed;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-50%) translateY(-50%);
   top: 0px;
-  opacity: 15%;
+  opacity: 3%;
   z-index: 0; 
   margin: auto;
 }
