--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* @import url("https://use.typekit.net/ztg3jcn.css"); */
+@import url('https://fonts.googleapis.com/css2?family=Fasthand&display=swap');
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -12,15 +15,23 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --primary-bg-color: #f0f0d8/*d4*/;
+  --primary-bg-color: #ffffff/*d4*/;
+  --border-color: #55beec;
+  --border-grey: #e9e9e9;
+  --border-dark-grey:rgb(203, 203, 203);
+  --btn-green: #498467;
+  --btn-blue: #1051ba;
+  --btn-red: #B84C3A;
+
   --primary-purple: #60495A;
+  --primary-txt-grey: #404040;
   /* --primary-green: #498467; */
   /* --primary-green: #929D87; */
   --primary-green: #6b8056;
   --primary-red: #B84C3A;
   --primary-yellow: #DAA520;
   --primary-beige: #D2B48C;
-  --btn-green: #498467;
+  
   --primary-cream: #fffff5;
 }
 
