--- a/src/styles/CreateIngredient.css
+++ b/src/styles/CreateIngredient.css
@@ -6,8 +6,11 @@
     padding-top: 20px;
     padding-bottom: 40px;
     border-radius: 10px;
-    background-color: var(--primary-green);
-    color: var(--primary-cream);
+    border-color: var(--border-color);
+    border-width: 3px;
+    border-style: solid;
+    background-color: var(--primary-bg-color);
+    color: var(--primary-txt-grey);
     box-shadow: 5px 5px 10px #00000025;
 }
 
@@ -34,10 +37,11 @@
 }
 
 .time-input-form {
-    margin: 20px;
+    /* margin: 20px; */
     margin-top: 10px;
     margin-bottom: 10px;
     width: 100%;
+    translate: 1%;
 }
 
 .time-input {
@@ -45,6 +49,35 @@
     margin: 8px;
     margin-right: 10px;
 }
+
+.create-ingredient-container .form-btn {
+    color: white;
+}
+
+.create-ingredient-container .form-btn:hover {
+    font-weight: 600;
+    box-shadow: 2px 2px 5px #00000025;
+    border-color: var(--border-grey);
+}
+
+.create-ingredient-container .submit-form {
+    background-color: var(--btn-green);
+    color: white;
+}
+
+.create-ingredient-container .clear-form {
+    background-color: var(--btn-red);
+    color: white;
+}
+
+.create-ingredient-container .hide-details {
+    border-color: var(--border-color);
+    border-style: solid;
+    border-width: 1px;
+    color: var(--primary-txt-grey);
+}
+
+
 
 @media (min-width: 601px) {
     .create-ingredient-container {
