--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -15,7 +15,7 @@ header {
   font-family: "Fasthand", cursive;
   font-weight: 400;
   font-style: normal;
-  font-size: 100px;
+  /* font-size: 100px; */
   border-bottom-color: var(--border-grey);
   border-bottom-style: solid;
   border-bottom-width: 1px;
