--- a/src/styles/Ingredient.css
+++ b/src/styles/Ingredient.css
@@ -1,4 +1,5 @@
 .ingredient-container {
+    margin: auto;
     text-align: left !important;
     justify-content: left;
     background-color: #ffffff;
@@ -52,4 +53,16 @@
 
 .ingredient-container .action-buttons .bi:hover {
     background-color: #f9f9f9;
+}
+
+@media (min-width: 601px) {
+    .ingredient-container {
+        width: 80%;
+    }
+}
+
+@media (max-width: 600px) {
+    .ingredient-container {
+        width: 100%;
+    }
 }
