Added initial dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -22,16 +22,13 @@
   --btn-green: #498467;
   --btn-blue: #1051ba;
   --btn-red: #B84C3A;
-
   --primary-purple: #60495A;
   --primary-txt-grey: #404040;
-  /* --primary-green: #498467; */
-  /* --primary-green: #929D87; */
+  --secondary-txt-grey: #404040; /*do not delete or move to media query*/
   --primary-green: #6b8056;
   --primary-red: #B84C3A;
   --primary-yellow: #DAA520;
   --primary-beige: #D2B48C;
-  
   --primary-cream: #fffff5;
 }
 
@@ -47,7 +44,7 @@ a:hover {
 
 body {
   background-color: var(--primary-bg-color);
-  color: var(--primary-purple);
+  color: var(--primary-txt-grey);
   margin: 0;
   display: flex;
   /*place-items: center;*/
@@ -90,6 +87,20 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
+    --primary-bg-color: #ffffff/*d4*/;
+    --border-color: #55beec;
+    --border-grey: #e9e9e9;
+    --border-dark-grey:rgb(203, 203, 203);
+    --btn-green: #498467;
+    --btn-blue: #1051ba;
+    --btn-red: #B84C3A;
+    --primary-purple: #60495A;
+    --primary-txt-grey: #404040;
+    --primary-green: #6b8056;
+    --primary-red: #B84C3A;
+    --primary-yellow: #DAA520;
+    --primary-beige: #D2B48C;
+    --primary-cream: #fffff5;
     color: var(--primary-purple);
     background-color: var(--primary-bg-color);
   }
@@ -100,3 +111,31 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary-bg-color: #404040/*d4*/;
+    --border-color: #55beec;
+    --border-grey: rgb(203, 203, 203);
+    --border-dark-grey:#e9e9e9;
+    --btn-green: #498467;
+    --btn-blue: #1051ba;
+    --btn-red: #B84C3A;
+    --primary-purple: #60495A;
+    --primary-txt-grey: #ffffff;
+    --primary-green: #6b8056;
+    --primary-red: #B84C3A;
+    --primary-yellow: #DAA520;
+    --primary-beige: #D2B48C;
+    --primary-cream: #fffff5;
+    /* color: var(--primary-purple);
+    background-color: var(--primary-bg-color); */
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
+
