--- a/src/index.css
+++ b/src/index.css
@@ -139,3 +139,14 @@ button:focus-visible {
   }
 }
 
+@media (min-width: 601px) {
+    .mob-only {
+      display: none;
+    }
+}
+
+@media (max-width: 600px) {
+  .mob-only {
+      display: block;
+    }
+}
