--- a/src/styles/CreateIngredient.css
+++ b/src/styles/CreateIngredient.css
@@ -45,10 +45,15 @@
     translate: 1%;
 }
 
+.time-input-form .time-container {
+    translate: -7px;
+}
+
 .time-input {
+    text-align: center;
     width: 40px;
-    margin: 8px;
-    margin-right: 10px;
+    margin: 12px;
+    margin-right: 5px;
 }
 
 .create-ingredient-container .form-btn {
